--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "react",
   "main": "index.js",
   "scripts": {
+    "build:home": "better-npm-run bd:home",
+    "build:home:prod": "better-npm-run bd:home:pd",
+    "start:home:client": "better-npm-run st:home:c",
     "build:tbk_fe": "better-npm-run bd:tbk_fe",
     "build:tbk_fe:prod": "better-npm-run bd:tbk_fe:pd",
     "start:tbk_fe:client": "better-npm-run st:tbk_fe:c",
@@ -13,6 +16,9 @@
     "test": "jest"
   },
   "betterScripts": {
+    "bd:home": "\"./node_modules/.bin/cross-env\" PROJECT_NAME='home' NODE_ENV='local' better-npm-run bd",
+    "bd:home:pd": "\"./node_modules/.bin/cross-env\" PROJECT_NAME='home' NODE_ENV='production' better-npm-run bd",
+    "st:home:c": "\"./node_modules/.bin/cross-env\" PROJECT_NAME='home' better-npm-run fe",
     "bd:tbk_fe": "\"./node_modules/.bin/cross-env\" PROJECT_NAME='tbk_fe' NODE_ENV='local' better-npm-run bd",
     "bd:tbk_fe:pd": "\"./node_modules/.bin/cross-env\" PROJECT_NAME='tbk_fe' NODE_ENV='production' better-npm-run bd",
     "st:tbk_fe:c": "\"./node_modules/.bin/cross-env\" PROJECT_NAME='tbk_fe' better-npm-run fe",
@@ -55,6 +61,7 @@
   },
   "homepage": "https://github.com/UgliFan/Violet#readme",
   "devDependencies": {
+    "antd": "^3.10.4",
     "axios": "^0.18.0",
     "immutable": "^3.8.2",
     "react": "latest",
@@ -110,6 +117,7 @@
     "style-loader": "^0.23.1",
     "url-loader": "^1.1.2",
     "webpack": "^4.20.2",
+    "webpack-cli": "^3.1.2",
     "webpack-merge": "^4.1.4",
     "webpack-node-externals": "^1.7.2",
     "webpack-serve": "^2.0.2",
