--- a/package.json
+++ b/package.json
@@ -86,6 +86,8 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.0.0",
     "@babel/runtime": "^7.0.0",
+    "@rematch/core": "^1.1.0",
+    "@rematch/loading": "^0.5.1",
     "autoprefixer": "^9.2.0",
     "babel-loader": "^8.0.4",
     "better-npm-run": "^0.1.0",
@@ -115,6 +117,7 @@
     "postcss-import": "^12.0.0",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.1.1",
+    "react-hot-loader": "^4.8.0",
     "style-loader": "^0.23.1",
     "url-loader": "^1.1.2",
     "webpack": "^4.20.2",
